# DL_DVC_template

./: README.md  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  template.py
research/: trials.ipynb
src/deepClassifier/: __init__.py
