[metadata]
licence = MIT
licence_file = LICENCE
classifier = 
    Programming Language :: Python :: 3.8
    Operation System :: DS independent

[options]
install_requires = 
    ensure==1.0.2
python_requires = >=3.7

[options.extras_require]
testing = 
    pytest>=7.1.3 # run unit test & intigration test
    mypy>=0.971   # typping error or not
    flake8>=5.0.4 # see other any mistake in code highlight
    tox>=3.25.1   # test your app localy 
    black>=22.8.0 # formating your app
   
[options.package_data]
deepClassifier = py.typed

[flake8]
max-line-length = 160
exclude = __init__.py
